--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Proyecto-Admision
-spring.datasource.url=jdbc:mysql://localhost:3306/proyectoadmision
+spring.datasource.url=jdbc:mysql://localhost:3306/admision
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
